fix: 🐛 Everything stroke x padding, scrollbars on mobile

--- a/src/App.scss
+++ b/src/App.scss
@@ -103,6 +103,10 @@ body::before {
     html {
         font-size: 14px;
 
+        #root {
+            overflow: hidden;
+        }
+
         .app {
             padding-top: 5%;
             overflow: auto;
